--- a/ToDoApplication/app/build.gradle
+++ b/ToDoApplication/app/build.gradle
@@ -22,5 +22,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/commons-io-2.4.jar')
+    compile files('libs/ActiveAndroid-3.1-adcddac4c58.jar')
     compile 'com.android.support:appcompat-v7:19.+'
 }
