--- a/ToDoApplication/app/src/main/AndroidManifest.xml
+++ b/ToDoApplication/app/src/main/AndroidManifest.xml
@@ -6,7 +6,16 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name="com.activeandroid.app.Application">
+
+        <meta-data
+            android:name="AA_DB_NAME"
+            android:value="Todo.db" />
+        <meta-data
+            android:name="AA_DB_VERSION"
+            android:value="1" />
+
         <activity
             android:name=".TodoActivity"
             android:label="@string/app_name" >
