--- a/InstagramViewer/app/build.gradle
+++ b/InstagramViewer/app/build.gradle
@@ -22,4 +22,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/android-async-http-1.4.5.jar')
+    compile 'com.pkmmte.view:circularimageview:1.1+'
 }
