--- a/VisionDemo/app/src/main/AndroidManifest.xml
+++ b/VisionDemo/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vvavy.visiondemo" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -9,6 +13,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".activity.MainActivity"
+            android:screenOrientation="landscape"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,11 +23,22 @@
         </activity>
         <activity
             android:name=".activity.ConfigActivity"
+            android:screenOrientation="landscape"
             android:label="@string/title_activity_preview" >
         </activity>
         <activity
             android:name=".activity.ExamActivity"
+            android:screenOrientation="landscape"
             android:label="@string/title_activity_run" >
+        </activity>
+        <activity
+            android:name=".activity.ResultActivity"
+            android:label="@string/title_activity_result" >
+        </activity>
+        <activity
+            android:name=".activity.ResultDetailsActivity"
+            android:screenOrientation="landscape"
+            android:label="@string/title_activity_result_details" >
         </activity>
     </application>
 
